@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/AllClass.r
-\docType{methods}
 \name{accessor}
 \alias{accessor}
 \alias{val}
