@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/Ops.r
-\docType{methods}
 \name{arithops}
 \alias{arithops}
 \alias{+,madness,missing-method}
