@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/coerce.r
-\docType{methods}
 \name{as}
 \alias{as}
 \alias{as.array,madness-method}
