@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/bind.r
-\docType{methods}
 \name{bind}
 \alias{bind}
 \alias{c.madness}
