@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/sums.r
-\docType{methods}
 \name{colsums}
 \alias{colsums}
 \alias{colSums}
@@ -31,8 +30,6 @@
     \sQuote{columns} to sum over.  For \code{row*}, the sum or mean is
     over dimensions \code{dims+1, \dots}; for \code{col*} it is over
     dimensions \code{1:dims}.}
-
-\item{...}{potentially further arguments, for method \sQuote{<->} generic compatibility.}
 }
 \value{
 a \code{madness} object. Note that the sums are flattened to a
