@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/det.r
-\docType{methods}
 \name{det}
 \alias{det}
 \alias{determinant.madness}
