@@ -1,13 +1,11 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/eigen.r
-\docType{methods}
 \name{eigen}
 \alias{eigen}
 \alias{eigen,madness-method}
 \title{Spectral Decomposition of a Matrix}
 \usage{
-\S4method{eigen}{madness}(x, symmetric, only.values = FALSE,
-  EISPACK = FALSE)
+\S4method{eigen}{madness}(x, symmetric, only.values = FALSE, EISPACK = FALSE)
 }
 \arguments{
 \item{x}{\code{madness} object representing a numeric matrix
@@ -15,8 +13,8 @@ whose spectral decomposition is to be computed.}
 
 \item{symmetric}{if \code{TRUE}, the matrix is assumed to be symmetric
     (or Hermitian if complex) and only its lower triangle (diagonal
-    included) is used.  If \code{symmetric} is not specified, the matrix
-    is inspected for symmetry.}
+    included) is used.  If \code{symmetric} is not specified,
+    \code{\link[base]{isSymmetric}(x)} is used.}
 
 \item{only.values}{if \code{TRUE}, only the eigenvalues are computed
     and returned, otherwise both eigenvalues and eigenvectors are
