@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/elwise.r
-\docType{methods}
 \name{elwise}
 \alias{elwise}
 \alias{abs,madness-method}
