@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/Ops.r
-\docType{methods}
 \name{marithops}
 \alias{marithops}
 \alias{\%*\%,madness,madness-method}
@@ -21,11 +20,11 @@
 \alias{tcrossprod,ANY,madness-method}
 \title{Basic Matrix Arithmetic Operations.}
 \usage{
-\S4method{\%*\%}{madness,madness}(x, y)
+\S4method{\\\%*\\\%}{madness,madness}(x, y)
 
-\S4method{\%*\%}{madness,array}(x, y)
+\S4method{\\\%*\\\%}{madness,array}(x, y)
 
-\S4method{\%*\%}{array,madness}(x, y)
+\S4method{\\\%*\\\%}{array,madness}(x, y)
 
 \S4method{crossprod}{madness,madness}(x, y)
 
@@ -45,8 +44,6 @@
 }
 \arguments{
 \item{x, y}{\code{madness} or numeric matrix values.}
-
-\item{...}{ignored here.}
 }
 \description{
 These perform basic matrix arithmetic on \code{madness} objects: matrix
