@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/trace.r
-\docType{methods}
 \name{matrix.trace}
 \alias{matrix.trace}
 \alias{matrix.trace,ANY-method}
