@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/matwise.r
-\docType{methods}
 \name{matwise}
 \alias{matwise}
 \alias{sqrtm}
