@@ -1,11 +1,12 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/max.r
-\docType{methods}
 \name{max}
 \alias{max}
 \alias{max,madness-method}
+\alias{max,madness-class}
 \alias{min,madness-method}
 \alias{min}
+\alias{min,madness-class}
 \title{Maxima and Minima}
 \usage{
 \S4method{max}{madness}(x, ..., na.rm = FALSE)
