@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/norm.r
-\docType{methods}
 \name{norm}
 \alias{norm}
 \alias{maxeig}
@@ -34,12 +33,10 @@ maxeig(x)
       \item{\code{"M"} or \code{"m"}}{specifies the \bold{m}aximum modulus of
 	all the elements in \code{x}; and}
       \item{\code{"2"}}{specifies the \dQuote{spectral} or 2-norm, which
-	is the largest singular value (\code{\link{svd}}) of \code{x}.}
+	is the largest singular value (\code{\link[base]{svd}}) of \code{x}.}
     }
     The default is \code{"O"}.  Only the first character of
     \code{type[1]} is used.}
-
-\item{...}{further arguments passed to or from other methods.}
 }
 \value{
 the matrix norm, a non-negative number.
