@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/numderiv.r
-\docType{methods}
 \name{numderiv}
 \alias{numderiv}
 \alias{numderiv,ANY,array-method}
@@ -11,11 +10,9 @@
 \usage{
 numderiv(f, x, eps=1e-8, type=c('forward','central','backward'),...)
 
-\S4method{numderiv}{ANY,array}(f, x, eps = 1e-08, type = c("forward",
-  "central", "backward"), ...)
+\S4method{numderiv}{ANY,array}(f, x, eps = 1e-08, type = c("forward", "central", "backward"), ...)
 
-\S4method{numderiv}{ANY,madness}(f, x, eps = 1e-08, type = c("forward",
-  "central", "backward"), ...)
+\S4method{numderiv}{ANY,madness}(f, x, eps = 1e-08, type = c("forward", "central", "backward"), ...)
 }
 \arguments{
 \item{f}{a function, to be evaluated at and near \code{x}.}
