@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/Ops.r
-\docType{methods}
 \name{outer}
 \alias{outer}
 \alias{outer,ANY,ANY-method}
@@ -36,7 +35,7 @@ X \%o\% Y
 \item{X, Y}{\code{madness} or numeric matrix values.}
 
 \item{FUN}{a function to use on the outer products, found \emph{via}
-    \code{\link{match.fun}} (except for the special case \code{"*"}).}
+    \code{\link[base]{match.fun}} (except for the special case \code{"*"}).}
 
 \item{...}{optional arguments to be passed to \code{FUN}.}
 }
