@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/reshape.r
-\docType{methods}
 \name{reshapes}
 \alias{reshapes}
 \alias{t,madness-method}
