@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/solve.r
-\docType{methods}
 \name{solve}
 \alias{solve}
 \alias{solve,ANY,missing-method}
