@@ -1,12 +1,13 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/sum.r
-\docType{methods}
 \name{sumprod}
 \alias{sumprod}
 \alias{sum,madness-method}
 \alias{sum}
+\alias{sum,madness-class}
 \alias{prod,madness-method}
 \alias{prod}
+\alias{prod,madness-class}
 \title{Sum and Product.}
 \usage{
 \S4method{sum}{madness}(x, ..., na.rm = FALSE)
