@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/diag.r
-\docType{methods}
 \name{todiag}
 \alias{todiag}
 \alias{diag,madness-method}
