@@ -1,6 +1,5 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/vec.r
-\docType{methods}
 \name{vec}
 \alias{vec}
 \alias{vec,madness-method}
